<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/encerrarApp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#9F0000"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                android:contentDescription="@string/fechar" />

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/criar_tarefa"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="304dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/limparBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E8D104"
                    android:text="@string/limpar"
                    android:textColor="#455A64"
                    app:icon="@android:drawable/ic_menu_delete" />

                <Space
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/pesquisarBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pesquisar"
                    app:icon="@android:drawable/ic_menu_search" />
            </LinearLayout>

            <TextView
                android:id="@+id/tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="0dp"
                android:text="@string/tarefa"
                android:textColorHint="#757575"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="375dp" />

            <EditText
                android:id="@+id/tarefaInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:ems="10"
                android:hint="@string/placeholderTarefa"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="399dp" />

            <TextView
                android:id="@+id/descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="0dp"
                android:text="@string/descricao"
                android:textColorHint="#757575"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="375dp" />

            <EditText
                android:id="@+id/descricaoInput"
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/placeholderDescricao"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="503dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="0dp"
                android:text="@string/data"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="375dp" />

            <EditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:ems="10"
                android:hint="@string/placeholderData"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="613dp" />

            <Button
                android:id="@+id/salvarBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/salvarbtn" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



